# customai

./: .env copy  Cargo.toml  README.md
resources/: prompts.json
resources/locale/: buttons.json  callbacks.json  messages.json
src/: config.rs  main.rs  resources.rs
src/client/: openai.rs
