[package]
name = "custom_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.11", features = ["macros", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
nanoid = "0.4"
chrono = "0.4"
dotenv-vault = "0.1.2"
async-openai = { version = "0.35.0", features = ["full"] }
dotenv = "0.15.0"
serde = "1.0.228"
dashmap = "6"
serde_json = "1.0.149"